--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nest-basic-hoidanit",
+  "name": "nest-nhathv",
   "version": "0.0.1",
   "description": "https://hoidanit.com.vn/",
-  "author": "Hỏi Dân IT",
+  "author": "Hoang Van Nhat",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -22,9 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "9.4.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "9.4.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "9.4.0",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.4.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0"
   },
