--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nestjs/common": "9.4.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "9.4.0",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "1.1.2",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "9.4.0",
     "dotenv": "^16.4.5",
