--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "9.4.0",
-    "@nestjs/config": "^3.2.2",
+    "@nestjs/config": "3.2.2",
     "@nestjs/core": "9.4.0",
-    "@nestjs/mapped-types": "1.1.2",
-    "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/mapped-types": "2.0.5",
+    "@nestjs/mongoose": "10.0.6",
     "@nestjs/platform-express": "9.4.0",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.4.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "16.4.5",
+    "mongoose": "8.4.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0"
   },
@@ -36,6 +37,7 @@
     "@nestjs/cli": "9.4.2",
     "@nestjs/schematics": "9.1.0",
     "@nestjs/testing": "9.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
