--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/mongoose": "10.0.6",
     "@nestjs/platform-express": "9.4.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "16.4.5",
     "mongoose": "8.4.1",
     "reflect-metadata": "0.1.13",
